mail and mobile l10n update

--- a/fi/browser/chrome/browser/downloads/downloads.properties
+++ b/fi/browser/chrome/browser/downloads/downloads.properties
@@ -69,7 +69,7 @@ statusSeparatorBeforeNumber=%1$S \u2014  %2$S
 
 fileExecutableSecurityWarning="%S" on suoritettava ohjelmatiedosto. Ohjelmatiedostot voivat sisältää viruksia tai muita haittaohjelmia, jotka voivat vahingoittaa tietokonettasi. Vain luotettuja tiedostoja tulisi suorittaa. Suoritetaanko tiedosto "%S"?
 fileExecutableSecurityWarningTitle=Suoritetaanko ohjelmatiedosto?
-fileExecutableSecurityWarningDontAsk=Älä kysy tätä enää uudestaan
+fileExecutableSecurityWarningDontAsk=Älä kysy uudestaan
 
 # LOCALIZATION NOTE (otherDownloads2):
 # This is displayed in an item at the bottom of the Downloads Panel when
