--- a/fi/mobile/android/chrome/browser.properties
+++ b/fi/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Asenna
 
 # Alerts
 alertAddonsDownloading=Ladataan lisäosaa
-alertAddonsInstalledNoRestart=Asennus valmis
 alertAddonsFail=Asennus ei onnistunut
+alertAddonsInstalledNoRestart.message=Asennus valmis
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=LISÄOSAT
 
 alertDownloadsStart2=Aloitetaan lataamaan
 alertDownloadsDone2=Lataus valmis
@@ -19,8 +23,11 @@ alertDownloadsToast=Aloitettiin lataaminen…
 alertDownloadsPause=Pysäytä
 alertDownloadsResume=Jatka
 alertDownloadsCancel=Peruuta
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Lataaminen ei ole mahdollista vierasistunnoissa
 
-alertFullScreenToast=Valitse Takaisin poistuaksesi kokoruutitilasta
+alertFullScreenToast=Valitse TAKAISIN poistuaksesi kokoruutitilasta
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
 # %S will be replaced by the name of the search engine (exposed by the current page)
@@ -89,7 +96,7 @@ identity.ownerUnknown3=tuntematon
 # Geolocation UI
 geolocation.allow=Kerro
 geolocation.dontAllow=Älä kerro
-geolocation.ask=Kerrotaanko sijainti sivustolle %S?
+geolocation.ask=Kerrotaanko sijaintisi sivustolle %S?
 # LOCALIZATION NOTE (geolocation.shareLocation): Label that will be used in
 # site settings dialog.
 geolocation.shareLocation=Sijainnin kertominen
@@ -111,10 +118,39 @@ desktopNotification.dontAskAgain=Älä kysy uudestaan tälle sivustolle
 # Contacts API
 contacts.allow=Salli
 contacts.dontAllow=Älä salli
-contacts.ask=Sallitaanko sivuston %S lukea yhteystietojesi tiedot?
+contacts.ask=Sallitaanko sivustolle %S pääsy yhteystietoihin?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Älä kysy uudestaan tälle sivustolle
+
+# Device Storage API
+deviceStorageMusic.allow=Salli
+deviceStorageMusic.dontAllow=Älä salli
+deviceStorageMusic.ask=Sallitaanko sivustolle %S pääsy musiikkiin?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Älä kysy uudestaan tälle sivustolle
+
+deviceStoragePictures.allow=Salli
+deviceStoragePictures.dontAllow=Älä salli
+deviceStoragePictures.ask=Sallitaanko sivustolle %S pääsy kuviin?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Älä kysy uudestaan tälle sivustolle
+
+deviceStorageSdcard.allow=Salli
+deviceStorageSdcard.dontAllow=Älä salli
+deviceStorageSdcard.ask=Sallitaanko sivustolle %S pääsy ulkoiseen tallennusvälineeseen?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Älä kysy uudestaan tälle sivustolle
+
+deviceStorageVideos.allow=Salli
+deviceStorageVideos.dontAllow=Älä salli
+deviceStorageVideos.ask=Sallitaanko sivustolle %S pääsy videoihin?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Älä kysy uudestaan tälle sivustolle
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semi-colon list of plural forms.
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Teksti kopioitiin leikepöydälle
 
 # Casting
-casting.prompt=Toista laitteella
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Lähetä laitteelle
+casting.mirrorTab=Peilaa välilehti
+casting.mirrorTabStop=Lopeta peilaaminen
 
 # Context menu
 contextmenu.openInNewTab=Avaa linkki uuteen välilehteen
@@ -209,7 +249,9 @@ contextmenu.unmute=Mykistys pois
 contextmenu.saveVideo=Tallenna video
 contextmenu.saveAudio=Tallenna ääni
 contextmenu.addToContacts=Lisää yhteystietoihin
-contextmenu.castToScreen=Toista laitteella
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Lähetä laitteelle
 
 contextmenu.copy=Kopioi
 contextmenu.cut=Leikkaa
@@ -284,7 +326,7 @@ remoteNotificationMessage=Listening on port %S
 # Helper apps
 helperapps.open=Avaa
 helperapps.ignore=Ohita
-helperapps.dontAskAgain=Älä kysy uudestaan tällä sivustolla
+helperapps.dontAskAgain=Älä kysy uudestaan tälle sivustolla
 helperapps.openWithApp2=Avaa sovelluksella %S
 helperapps.openWithList2=Avaa sovelluksella
 helperapps.always=Aina
@@ -340,4 +382,10 @@ browser.menu.context.mailto = Sähköposti
 
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Valitse syöte
-feedHandler.subscribeWith=Tilaa sovelmalla
+feedHandler.subscribeWith=Tilaa sovelluksella
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S is deprecated. Please use %S instead
