--- a/fi/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/fi/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -135,7 +135,7 @@ downloadsTitlePercent=#2% #1 tiedostosta - Lataukset;#2% #1 tiedostosta - Latauk
 
 fileExecutableSecurityWarning="%S" on suoritettava ohjelmatiedosto. Ohjelmatiedostot voivat sisältää viruksia tai muita haittaohjelmia, jotka voivat vahingoittaa tietokonettasi. Vain luotettuja tiedostoja tulisi suorittaa. Suoritetaanko tiedosto "%S"?
 fileExecutableSecurityWarningTitle=Suoritetaanko ohjelmatiedosto?
-fileExecutableSecurityWarningDontAsk=Älä kysy tätä enää uudestaan
+fileExecutableSecurityWarningDontAsk=Älä kysy uudestaan
 
 displayNameDesktop=Työpöytä
 
