--- a/fi/mobile/android/chrome/webapp.properties
+++ b/fi/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 päivitys epäonnistui;#1 päivitystä epäonnistui
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Päivityksen lataus lisäosalle %1$S epäonnistui;Päivitysten lataaminen lisäosille %1$S epäonnistui
+
+webappsDisabledInGuest=Sovellusten asentaminen ei ole mahdollista vierasistunnoissa
