--- a/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -70,3 +70,6 @@ email-link-button.label = Enviar enlace
 
 quit-button.tooltiptext.linux2 = Salir de %1$S (%2$S)
 quit-button.tooltiptext.mac = Salir de %1$S (%2$S)
+
+panic-button.label = Olvidar
+panic-button.tooltiptext = Olvidarse de parte del historial de navegación
