Bug 1069300 - strings for panic/privacy/forget-button

--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -93,3 +93,6 @@ quit-button.tooltiptext.linux2 = Ukončiť %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
+
+panic-button.label = Zabudnúť
+panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za definovaný čas
