--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -94,5 +94,8 @@ quit-button.tooltiptext.linux2 = Ukončiť %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
 
+panic-button.label = Zabudnúť
+panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za definovaný čas
+
 loop-call-button.label = Pozvať priateľa na hovor
 loop-call-button.tooltiptext = Umožní pozvať priateľa na internetový hovor
