[browser] Bug 1063957 - Menu listing device access by websites empty if string for device set missing

--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -556,13 +556,18 @@ getUserMedia.stopSharing.accesskey = A
 
 getUserMedia.sharingMenu.label = Onglets partageant des périphériques
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -576,6 +581,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (caméra et microphone)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (caméra, microphone et application)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (caméra, microphone et écran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (caméra, microphone et fenêtre)
+getUserMedia.sharingMenuCameraApplication = %S (caméra et application)
+getUserMedia.sharingMenuCameraScreen = %S (caméra et écran)
+getUserMedia.sharingMenuCameraWindow = %S (caméra et fenêtre)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microphone et application)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microphone et écran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microphone et fenêtre)
