[browser] Bug 1067141 - Scratchpad Open File uses fallbackCharsetList on UTF-8 NS_ERROR_ILLEGAL_INPUT

--- a/fr/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fr/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Ouvrir un fichier
 # open fails.
 openFile.failed=Échec de la lecture du fichier.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Échec de la conversion du fichier en Unicode depuis %1$S.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Vider la liste
