[browser] Bug 1064282 - Scratchpad should have statusbar like Page Source viewer

--- a/fr/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fr/browser/chrome/browser/devtools/scratchpad.properties
@@ -82,6 +82,11 @@ browserContext.notification=Cette ardoise JavaScript s'exécute dans le contexte
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/fr/Outils/Ardoise
 
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Ligne %1$S, colonne %2$S
+
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
 fileNoLongerExists.notification=Ce fichier n'existe plus.
