[browser] Bug 1067888 - Add autocomplete result type for searching via current search engine

--- a/fr/browser/chrome/browser/places/places.properties
+++ b/fr/browser/chrome/browser/places/places.properties
@@ -91,6 +91,7 @@ bookmarkResultLabel=Marque-page
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
 switchtabResultLabel=Onglet
+searchengineResultLabel=Recherche
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
