--- a/fr/browser/chrome/browser/places/places.properties
+++ b/fr/browser/chrome/browser/places/places.properties
@@ -75,22 +75,15 @@ OrganizerQueryDownloads=Téléchargements
 OrganizerQueryAllBookmarks=Tous les marque-pages
 OrganizerQueryTags=Étiquettes
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel)
 # This is what we use to form the label (for screen readers)
 # for url bar autocomplete results of type "tag"
 # See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Étiquette
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "bookmark"
-# See createResultLabel() in urlbarBindings.xml
 bookmarkResultLabel=Marque-page
-
-# LOCALIZATION NOTE (switchtabResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
 switchtabResultLabel=Onglet
+keywordResultLabel=Mot-clé
 searchengineResultLabel=Recherche
 
 # LOCALIZATION NOTE (lockPrompt.text)
