[mobile] Bug 1058150 - Use restricted profiles for guest mode.

--- a/fr/mobile/android/chrome/webapp.properties
+++ b/fr/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 mise à jour a échoué;#1 mises à jour ont échoué
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Échec de la récupération de la mise à jour pour %1$S;Échec de la récupération des mises à jour pour %1$
 
-webappsDisabledInGuest=L'installation d'applications est désactivée pour les sessions invité
+webappsDisabled=L'installation d'applications est désactivée
