--- a/da/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/da/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,8 @@ quit-button.tooltiptext.linux2 = Afslut %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Afslut %1$S (%2$S)
 
+panic-button.label = Glem
+panic-button.tooltiptext = Glem noget af din browserhistorik
+
 loop-call-button.label = Inviter nogen til at snakke
 loop-call-button.tooltiptext = Inviter nogen til at snakke
