--- a/da/browser/chrome/browser/devtools/webide.properties
+++ b/da/browser/chrome/browser/devtools/webide.properties
@@ -47,7 +47,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=installer
 addons_uninstall_button=afinstaller
 addons_adb_label=Tilføjelsen ADB Helper
-addons_adb_warning=USB-enheder vil ikke blive opdaget uden denne tilføjelse
+addons_adb_warning=USB-enheder vil ikke blive fundet uden denne tilføjelse
 addons_status_unknown=?
 addons_status_installed=Installeret
 addons_status_uninstalled=Ikke installeret
