--- a/fi/browser/chrome/browser/browser.properties
+++ b/fi/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Älä näytä tätä viestiä kun ponnahdusikkun
 popupWarningDontShowFromLocationbar=Älä näytä viestipalkkia kun ponnahdusikkuna estetään
 popupShowPopupPrefix=Näytä "%S"
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S estää sivun sisältöä latautumasta.
+badContentBlocked.notblocked.message=%S ei estä mitään sisältö sivulla.
+
 # missing plugin installer
 installPlugin.message = Asennetaanko liitännäinen, jonka sivun mediatiedostot tarvitsevat näkyäkseen?
 installPlugin.button.label=Asenna %S
@@ -444,6 +449,12 @@ webapps.install.accesskey = A
 webapps.requestInstall = Haluatko asentaa sovelluksen "%1$S" sivustolta (%2$S)?
 webapps.install.success = Sovellus asennettu
 webapps.install.inprogress = Sovellusta asennetaan
+webapps.uninstall = Poista
+webapps.uninstall.accesskey = P
+webapps.doNotUninstall = Älä poista
+webapps.doNotUninstall.accesskey = Ä
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Poistetaanko sovellus "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S on kokoruututilassa.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Haluatko jakaa mikrofonin sivuston %S kan
 getUserMedia.shareScreen.message = Haluatko jakaa näyttösi sivuston %S kanssa?
 getUserMedia.shareCameraAndMicrophone.message = Haluatko jakaa kameran ja mikrofonin sivuston %S kanssa?
 getUserMedia.shareScreenAndMicrophone.message = Haluatko jakaa näyttösi ja mikrofonin sivuston %S kanssa?
+getUserMedia.selectWindow.label=Jaettava ikkuna:
+getUserMedia.selectWindow.accesskey=i
+getUserMedia.selectScreen.label=Jaettava näyttö:
+getUserMedia.selectScreen.accesskey=n
+getUserMedia.selectApplication.label=Jaettava ohjelma:
+getUserMedia.selectApplication.accesskey=o
 getUserMedia.noVideo.label = Ei videota
-getUserMedia.noWindowOrScreen.label = Ei ikkunaa tai näyttöä
+getUserMedia.noApplication.label = Ei ohjelmaa
+getUserMedia.noScreen.label = Ei näyttöä
+getUserMedia.noWindow.label = Ei ikkunaa
 getUserMedia.noAudio.label = Ei ääntä
 getUserMedia.shareEntireScreen.label = Koko näyttö
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 ikkuna);#1 (#2 ikkunaa)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Koko näyttö
 getUserMedia.shareSelectedDevices.label = Jaa valittu laite;Jaa valitut laitteet
 getUserMedia.shareSelectedDevices.accesskey = J
 getUserMedia.shareScreen.label = Jaa näyttö
+getUserMedia.shareApplication.label = Jaa valittu ohjelma
 getUserMedia.shareWindow.label = Jaa valittu ikkuna
 getUserMedia.shareSelectedItems.label = Jaa valitut kohteet
 getUserMedia.always.label = Jaa aina
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = k
 getUserMedia.sharingCamera.message2 = Jaat tällä hetkellä kameran tämän sivuston kanssa.
 getUserMedia.sharingMicrophone.message2 = Jaat tällä hetkellä mikrofonin tämän sivuston kanssa.
 getUserMedia.sharingCameraAndMicrophone.message2 = Jaat tällä hetkellä kameran ja mikrofonin tämän sivuston kanssa.
+getUserMedia.sharingApplication.message = Jaat tällä hetkellä ohjelman tämän sivuston kanssa.
 getUserMedia.sharingScreen.message = Jaat tällä hetkellä näyttösi tämän sivuston kanssa.
 getUserMedia.sharingWindow.message = Jaat tällä hetkellä ikkunan tämän sivuston kanssa.
 getUserMedia.continueSharing.label = Jatka jakamista
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = J
 getUserMedia.stopSharing.label = Lopeta jakaminen
 getUserMedia.stopSharing.accesskey = L
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S esti suojaamattoman sisällön avaamisen.
-mixedContentBlocked.keepBlockingButton.label = Jatka estoa
-mixedContentBlocked.keepBlockingButton.accesskey = J
-mixedContentBlocked.unblock.label = Poista esto tältä sivulta
-mixedContentBlocked.unblock.accesskey = P
+getUserMedia.sharingMenu.label = Laitteita jakavat välilehdet
+getUserMedia.sharingMenu.accesskey = j
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofoni)
+getUserMedia.sharingMenuApplication = %S (ohjelma)
+getUserMedia.sharingMenuScreen = %S (näyttö)
+getUserMedia.sharingMenuWindow = %S (ikkuna)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera ja mikrofoni)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofoni ja ohjelma)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofoni ja näyttö)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofoni ja ikkuna)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofoni ja ohjelma)
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofoni ja näyttö)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofoni ja ikkuna)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Tuntematon lähde
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S vaikuttaa… hitaalta… käynnistymään.
