--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -314,6 +314,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (cámara y micrófono)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (cámara, micrófono y aplicación)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (cámara, micrófono y pantalla)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (cámara, micrófono y ventana)
+getUserMedia.sharingMenuCameraApplication = %S (cámara y aplicación)
+getUserMedia.sharingMenuCameraScreen = %S (cámara y pantalla)
+getUserMedia.sharingMenuCameraWindow = %S (cámara y ventana)
 getUserMedia.sharingMenuMicrophoneApplication = %S (micrófono y aplicación)
 getUserMedia.sharingMenuMicrophoneScreen = %S (micrófono y pantalla)
 getUserMedia.sharingMenuMicrophoneWindow = %S (micrófono y ventana)
