--- a/es-CL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-CL/browser/chrome/browser/devtools/scratchpad.properties
@@ -7,6 +7,7 @@ browserWindow.unavailable = Borrador no puede encontrar ninguna ventana de naveg
 scratchpadContext.invalid = Borrar no puede ejecutar esta operación en el modo actual.
 openFile.title = Abrir archivo
 openFile.failed = No se pudo escribir el archivo.
+importFromFile.convert.failed=Falló la conversión del archivo a Unicode desde %1$S.
 clearRecentMenuItems.label = Limpiar elementos
 saveFileAs = Guardar archivo como
 saveFile.failed = Falló la operación de guardar el archivo.
