--- a/es-CL/browser/chrome/browser/places/places.properties
+++ b/es-CL/browser/chrome/browser/places/places.properties
@@ -60,6 +60,7 @@ tagResultLabel = Etiqueta
 bookmarkResultLabel = Marcador
 switchtabResultLabel=Pestaña
 keywordResultLabel=Palabra clave
+searchengineResultLabel=Búsqueda
 lockPrompt.title = Error de inicio del Navegador
 lockPrompt.text = El sistema de marcadores e historial no serán funcionales debido a que uno de los archivos de %S está ocupado por otra aplicación. Algunos programas de seguridad pueden causar este problema.
 lockPromptInfoButton.label = Saber más
