--- a/da/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/da/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Afslut %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Afslut %1$S (%2$S)
+
+panic-button.label = Glem
+panic-button.tooltiptext = Glem noget af din browserhistorik
