FX l10n rest excl. new additions

--- a/fi/browser/chrome/browser/preferences/preferences.properties
+++ b/fi/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Seuraavat evästeet on asetettu tietokoneellesi:
 cookiesFiltered=Seuraavat evästeet täsmäävät hakuusi:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Poista sivuston yhteydetöntä tilaa varten tallentamat tiedot
 offlineAppRemovePrompt=Poistettuasi sivuston %S tallentamat tiedot, sivustoa ei voi enää käyttää yhteydettömässä tilassa. Poistetaanko tiedot?
 offlineAppRemoveConfirm=Poista tiedot
