--- a/fi/browser/chrome/browser/loop/loop.properties
+++ b/fi/browser/chrome/browser/loop/loop.properties
@@ -36,7 +36,7 @@ display_name_available_status=Tavoitettavissa
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-unable_retrieve_url=Pahoittelut, puheluosoitetta ei löytynyt.
+unable_retrieve_url=Pahoittelut, soitto-osoitetta ei löytynyt.
 session_expired_error_description=Istunto vanhentunut. Kaikki aikaisemmin luodut ja jaetut linkit eivät enää toimi.
 could_not_authenticate=Ei voitu todentaa
 password_changed_question=Oletko vaihtanut salasanaa?
@@ -56,7 +56,7 @@ share_email_subject3=Sinut on kutsuttu keskusteluun
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body3=Hyväksy kutsu ja aloita keskustelu kopioimalla tai avaamalla seuraava linkkin:\r\n\r\n{{callUrl}}
-share_button=Sähköpostita
+share_button=Lähetä postia
 copy_url_button=Kopioi
 copied_url_button=Kopioitu!
 
@@ -115,7 +115,7 @@ import_failed_description_simple=Yhteystietojen tuonti epäonnistui
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Yhteystietojen tuonti epäonnistui. Voit hakea {{import_failed_support_link_label}} lisäohjeita
+import_failed_description=Yhteystietojen tuonti epäonnistui. Lisäohjeita {{import_failed_support_link_label}}
 import_failed_support_link_label=tukisivustoltamme
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -170,28 +170,101 @@ video_call_menu_button=Videokeskustelu
 
 # Conversation Window Strings
 
-incoming_call_title=Saapuva puhelu…
-incoming_call=Saapuva puhelu
-incoming_call_answer_button=Vastaa
-incoming_call_decline_button=Hylkää
-incoming_call_ignore_button=Jätä huomiotta
+initiate_call_button_label2=Oletko valmis aloittamaan keskustelun?
+incoming_call_title2=Keskustelupyyntö
+incoming_call_accept_button=Hyväksy
+incoming_call_accept_audio_only_tooltip=Hyväksy äänen kanssa
+incoming_call_cancel_button=Peruuta
+incoming_call_cancel_and_block_button=Peruuta ja estä
 incoming_call_block_button=Estä
 hangup_button_title=Katkaise puhelu
+hangup_button_caption2=Lopeta
 mute_local_audio_button_title=Vaimenna ääni
 unmute_local_audio_button_title=Ääni päälle
 mute_local_video_button_title=Piilota video
 unmute_local_video_button_title=Näytä video
 
-peer_ended_conversation=Keskustelukumppani katkaisi puhelun.
-call_has_ended=Puhelusi päättyi.
-close_window=Sulje ikkuna
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Keskustelussa {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Aloita keskustelu?
+initiate_audio_video_call_button2=Aloita
+initiate_audio_video_call_tooltip2=Aloita videokeskustelu
+initiate_audio_call_button2=Äänikeskustelu
+initiate_call_cancel_button=Peruuta
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Yhdistetään…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Soi…
+
+peer_ended_conversation2=Keskustelukumppani päätti keskustelun.
+conversation_has_ended=Keskustelu päättyi.
+restart_call=Liity uudestaan
+
+generic_failure_title=Jotain meni pieleen.
+generic_failure_with_reason2=Voit yrittää uudestaan tai lähettää sähköpostilla linkin, josta sinut saa kiinni myöhemmin.
+generic_failure_no_reason2=Yritetäänkö uudestaan?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Tämä henkilö ei ole verkkoyhteyden päässä
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Puhelusi ei mennyt läpi.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Yritä uudestaan
+email_link_button=Lähetä linkki
+cancel_button=Peruuta
 
 cannot_start_call_session_not_ready=Ei voida soittaa, istunto ei ole valmis.
 network_disconnected=Verkkoyhteys katkesi yllättäen.
+connection_error_see_console_notification=Puhelu epäonnistui; katso lisätietoja konsolista.
 
-connection_error_see_console_notification=Puhelu epäonnistui. Katso yksityiskohdat konsolista.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Käyttämällä tätä tuotetta hyväksyt sen <a \
-  target="_blank" href="{{terms_of_use_url}}">käyttöehdot</a> ja <a \
-  href="{{privacy_notice_url}}">tietosuojakäytännön</a>.
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Käyttämällä {{clientShortname}} hyväksyt sen {{terms_of_use}} \
+  ja {{privacy_notice}}.
+legal_text_tos = käyttöehdot
+legal_text_privacy = tietosuojakäytännön
+client_shortname_fallback=tätä tuotetta
+
+feedback_call_experience_heading2=Miten soitto sujui?
+feedback_what_makes_you_sad=Miksi et ole tyytyväinen?
+feedback_thank_you_heading=Kiitoksia palautteesta!
+feedback_category_audio_quality=Äänenlaatu
+feedback_category_video_quality=Videon laatu
+feedback_category_was_disconnected=Yhteys katkesi
+feedback_category_confusing=Sekava
+feedback_category_other=Muu:
+feedback_custom_category_text_placeholder=Mikä meni pieleen?
+feedback_submit_button=Lähetä
+feedback_back_button=Takaisin
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Tämä ikkuna sulkeutuu {{countdown}} sekunnissa;Tämä ikkuna sulkeutuu {{countdown}} sekunnissa
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Liity uudestaan
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Ilmoita käyttäjä
