--- a/fi/browser/chrome/browser/quitDialog.properties
+++ b/fi/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Tallenna ja lopeta
 neverAsk2=&Älä kysy seuraavalla kerralla
 message=Haluatko %Sin tallentavan avoimet välilehdet ja ikkunat niin, että ne avataan automaattisesti seuraavalla käynnistyskerralla?
 messageNoWindows=Haluatko %Sin tallentavan avoimet välilehdet niin, että ne avataan automaattisesti seuraavalla käynnistyskerralla?
+messagePrivate=Yksityinen selaustila on käytössä. %Sin lopettaminen nyt hävittää kaikki avoimet välilehdet ja ikkunat.
