--- a/fi/browser/chrome/browser/shellservice.properties
+++ b/fi/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S-&asetukset
 safeModeLabel=%Sin &vikasietotila
-setDefaultBrowserTitle=Oletusselain
-setDefaultBrowserMessage=%S ei ole järjestelmän oletusselain. Asetetaanko se oletusselaimeksi?
-setDefaultBrowserDontAsk=Tarkista oletusselaintila aina %Sin käynnistyksen yhteydessä.
-alreadyDefaultBrowser=%S on oletusselain.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Ota kaikki hyöty irti %Sista asettamalla se oletusselaimeksi
+setDefaultBrowserConfirm.label     = Aseta %S oletusselaimeksi
+setDefaultBrowserConfirm.accesskey = A
+setDefaultBrowserOptions.label     = Asetukset
+setDefaultBrowserOptions.accesskey = s
+setDefaultBrowserNotNow.label      = Ei nyt
+setDefaultBrowserNotNow.accesskey  = E
+setDefaultBrowserNever.label       = Älä kysy uudestaan
+setDefaultBrowserNever.accesskey   = Ä
+
+
 desktopBackgroundLeafNameWin=Työpöydän taustakuva.bmp
 DesktopBackgroundDownloading=Tallennetaan kuvaa…
 DesktopBackgroundSet=Aseta työpöydän taustakuva
