--- a/fi/browser/chrome/browser/webrtcIndicator.properties
+++ b/fi/browser/chrome/browser/webrtcIndicator.properties
@@ -9,11 +9,12 @@
 # titles. It is not normally visible anywhere.
 webrtcIndicator.windowtitle = %S - Jakamisen tietoikkuna
 
-webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera ja mikrofoni on jaettu. Muokkaa jakoasetuksia.
-webrtcIndicator.sharingCamera.tooltip              = Kamera on jaettu. Muokkaa jakoasetuksia.
-webrtcIndicator.sharingMicrophone.tooltip          = Mikrofoni on jaettu. Muokkaa jakoasetuksia.
-webrtcIndicator.sharingScreen.tooltip = Näyttö on jaettu. Muokkaa jakoasetuksia.
-webrtcIndicator.sharingWindow.tooltip = Ikkuna on jaettu. Muokkaa jakoasetuksia.
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera ja mikrofoni on jaettu. Napsauta muokataksesi jakoasetuksia.
+webrtcIndicator.sharingCamera.tooltip              = Kamera on jaettu. Napsauta muokataksesi jakoasetuksia.
+webrtcIndicator.sharingMicrophone.tooltip          = Mikrofoni on jaettu. Napsauta muokataksesi jakoasetuksia.
+webrtcIndicator.sharingApplication.tooltip = Ohjelma on jaettu. Napsauta muokataksesi jakoasetuksia.
+webrtcIndicator.sharingScreen.tooltip = Näyttö on jaettu. Napsauta muokataksesi jakoasetuksia.
+webrtcIndicator.sharingWindow.tooltip = Ikkuna on jaettu. Napsauta muokataksesi jakoasetuksia.
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
@@ -21,16 +22,31 @@ webrtcIndicator.sharingWindow.tooltip = Ikkuna on jaettu. Muokkaa jakoasetuksia.
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.sharingCameraWith.menuitem = Kamera on jaettu sivuston "%S" kanssa
-webrtcIndicator.sharingMicrophoneWith.menuitem = Mikrofoni on jaettu sivuston "%S" kanssa
-webrtcIndicator.sharingScreenWith.menuitem = Näyttö on jaettu sivuston "%S" kanssa
-webrtcIndicator.sharingWindowWith.menuitem = Ikkuna on jaettu sivuston "%S" kanssa
+webrtcIndicator.sharingCameraWith.menuitem = Kamera on jaettu välilehdellä "%S"
+webrtcIndicator.sharingMicrophoneWith.menuitem = Mikrofoni on jaettu välilehdellä "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Ohjelma on jaettu välilehdellä "%S"
+webrtcIndicator.sharingScreenWith.menuitem = Näyttö on jaettu välilehdellä "%S"
+webrtcIndicator.sharingWindowWith.menuitem = Ikkuna on jaettu välilehdellä "%S"
 webrtcIndicator.controlSharing.menuitem = Muokkaa jakoasetuksia
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Kamera on jaettu #1 välilehdellä;Kamera on jaettu #1 välilehdellä
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Mikrofoni on jaettu #1 välilehdellä;Mikrofoni on jaettu #1 välilehdellä
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Ohjelma on jaettu #1 välilehdellä;Ohjelma on jaettu #1 välilehdellä
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Näyttö on jaettu #1 välilehdellä;Näyttö on jaettu #1 välilehdellä
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Ikkuna on jaettu #1 välilehdellä;Ikkuna on jaettu #1 välilehdellä
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
