--- a/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,8 @@ quit-button.tooltiptext.linux2 = Sulje %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sulje %1$S (%2$S)
 
+panic-button.label = Unohda
+panic-button.tooltiptext = Unohda jonkin verran selaushistoriaa
+
 loop-call-button.label = Kutsu joku keskusteluun
 loop-call-button.tooltiptext = Kutsu joku keskusteluun
