FX panic-forget l10n for beta

--- a/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Sulje %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sulje %1$S (%2$S)
+
+panic-button.label = Unohda
+panic-button.tooltiptext = Unohda jonkin verran selaushistoriaa
