--- a/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Končaj %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Končaj %1$S (%2$S)
+
+panic-button.label = Pozabi
+panic-button.tooltiptext = Pozabi nekaj zgodovine brskanja
