--- a/uk/browser/chrome/browser/loop/loop.properties
+++ b/uk/browser/chrome/browser/loop/loop.properties
@@ -127,7 +127,7 @@ remove_contact_menu_button=Вилучити контакт
 confirm_delete_contact_alert=Ви впевнені, що хочете вилучити цей контакт?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
-confirm_delete_contact_remove_button=Прибрати контакт
+confirm_delete_contact_remove_button=Вилучити контакт
 confirm_delete_contact_cancel_button=Скасувати
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
