--- a/he/browser/chrome/browser/preferences/preferences.properties
+++ b/he/browser/chrome/browser/preferences/preferences.properties
@@ -116,6 +116,7 @@ offlinepermissionstitle=נתונים לא מקוונים
 #   %1$S = size
 #   %2$S = unit (MB, KB, etc.)
 actualDiskCacheSize=מטמון הרשת שלך משתמש כעת ב־%1$S %2$S משטח הדיסק
+actualDiskCacheSizeCalculated=חישוב גודל מטמון עבור תוכן רשת…
 
 ####Preferences::Advanced::Network
 #LOCALIZATION NOTE: The next string is for the disk usage of the application cache.
@@ -141,5 +142,5 @@ shouldRestartTitle=הפעלה מחדש של %S
 ###Preferences::Sync::Firefox Accounts
 firefoxAccountsVerificationSentTitle=קישור אימות נשלח
 # LOCALIZATION NOTE: %S = user's email address.
-# firefoxAccountsVerificationSentHeading=קישור לאימות נשלח לכתובת %S
-# firefoxAccountVerificationSentDescription=נא לבדוק את תיבת הדואר האלקטרוני שלך וללחוץ על הקישור כדי להתחיל לסנכרן.
+firefoxAccountsVerificationSentHeading=קישור לאימות נשלח לכתובת %S
+firefoxAccountVerificationSentDescription=נא לבדוק את תיבת הדואר האלקטרוני וללחוץ על הקישור כדי להתחיל בסנכרון.
