--- a/he/browser/installer/nsisstrings.properties
+++ b/he/browser/installer/nsisstrings.properties
@@ -47,6 +47,8 @@ ADD_CheckboxShortcutOnDesktop=על &שולחן העבודה
 SPACE_REQUIRED=שטח נדרש:
 SPACE_AVAILABLE=שטח זמין:
 ONE_MOMENT=נא להמתין, $BrandShortName יופעל ברגע שההתקנה תסתיים…
+ONE_MOMENT_INSTALL=נא להמתין, $BrandShortName יופעל ברגע שההתקנה תסתיים…
+ONE_MOMENT_UPGRADE=נא להמתין, $BrandShortName יופעל ברגע שהשדרוג יסתיים…
 INSTALL_MAINT_SERVICE=&התקנת שירות העדכונים ברקע של $BrandShortName
 SEND_PING=&שליחת מידע על התקנה זו ל־Mozilla
 BROWSE_BUTTON=&עיון
@@ -57,9 +59,13 @@ DOWNLOADING_DONE=הורדה הסתיימה
 INSTALLING_TO_BE_DONE=בהתקנה
 INSTALLING_IN_PROGRESS=בהתקנה…
 
+DOWNLOADING_LABEL=$BrandShortName בהורדה…
+INSTALLING_LABEL=$BrandShortName בהתקנה…
+UPGRADING_LABEL=$BrandShortName בשדרוג…
+
 SELECT_FOLDER_TEXT=נא לבחור את התיקייה בה $BrandShortName יותקן.
 
-# BYTE=B
-# KILO=K
-# MEGA=M
-# GIGA=G
+BYTE=B
+KILO=K
+MEGA=M
+GIGA=G
