Bug 1073143 - Time in Email Responses is missing (after bug 995797 rewrite of reply-header customization)

--- a/de/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/de/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -272,9 +272,9 @@ returnToComposeWindowQuestion=Soll das Verfassen-Fenster wieder angezeigt werden
 ## LOCALIZATION NOTE (mailnews.reply_header_authorwrotesingle): #1 is author (name of person replying to)
 mailnews.reply_header_authorwrotesingle=#1 schrieb:
 ## LOCALIZATION NOTE (mailnews.reply_header_ondateauthorwrote): #1 is author, #2 is date, #3 is time
-mailnews.reply_header_ondateauthorwrote=Am #2 schrieb #1:
+mailnews.reply_header_ondateauthorwrote=Am #2 um #3 schrieb #1:
 ## LOCALIZATION NOTE (mailnews.reply_header_authorwroteondate): #1 is author, #2 is date, #3 is time
-mailnews.reply_header_authorwroteondate=#1 schrieb am #2 #3:
+mailnews.reply_header_authorwroteondate=#1 schrieb am #2 um #3:
 
 ## reply header in composeMsg
 ## user specified
