[sy] browser: Bug 1069300 - strings for panic/privacy/forget-button

--- a/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,8 @@ quit-button.tooltiptext.linux2 = Изађи %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Изађи %1$S (%2$S)
 
+panic-button.label = Заборави
+panic-button.tooltiptext = Заборави неки део историје прегледања
+
 loop-call-button.label = Позовите некога на разговор
 loop-call-button.tooltiptext = Позовите некога на разговор
