--- a/de/browser/chrome/browser/devtools/scratchpad.properties
+++ b/de/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Ansicht für Javascript-Umgebung
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=JavaScript-Umgebung
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Warnung vor Betrugsversuchen: Seien Sie aufmerksam, wenn Sie Sachen einfügen, die Sie nicht verstehen. Dies würde es Angreifern ermöglichen, Ihre Identität zu stehlen oder die Kontrolle über Ihren Computer zu übernehmen. Bitte geben Sie zum Erlauben des Einfügens unten '%S' in die JavaScript-Umgebung ein.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=Einfügen erlauben
