--- a/de/browser/chrome/browser/devtools/toolbox.properties
+++ b/de/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Entwicklerwerkzeuge
 # for the options panel tab.
 optionsButton.tooltip=Werkzeugkasten-Einstellungen
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Einstellungen
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=Ansicht für Werkzeugkasten-Einstellungen
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Ein Element der Seite auswählen
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Dunkles Theme
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Helles Theme
