--- a/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,3 +100,7 @@ quit-button.tooltiptext.linux2 = Aizvērt %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Aizvērt %1$S (%2$S)
+
+panic-button.label = Aizmirst
+panic-button.tooltiptext = Aizmirst daļu pārlūkošanas vēstures
+
