--- a/he/browser/chrome/browser/devtools/gcli.properties
+++ b/he/browser/chrome/browser/devtools/gcli.properties
@@ -11,8 +11,17 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
-# LOCALIZATION NOTE (canonDescNone): Short string used to describe any command
-# or command parameter when no description has been provided.
+# For each command there are in general two strings. As an example consider
+# the 'pref' command.
+# commandDesc (e.g. prefDesc for the command 'pref'): this string contains a
+# very short description of the command. It's designed to be shown in a menu
+# alongside the command name, which is why it should be as short as possible.
+# commandManual (e.g. prefManual for the command 'pref'): this string will
+# contain a fuller description of the command. It's diplayed when the user
+# asks for help about a specific command (e.g. 'help pref').
+
+# LOCALIZATION NOTE: This message is used to describe any command or command
+# parameter when no description has been provided.
 canonDescNone=(אין תיאור)
 
 # LOCALIZATION NOTE (cliEvalJavascript): The special '{' command allows entry
@@ -24,6 +33,19 @@ cliEvalJavascript=הכנס JavaScript ישירות
 # than the current command can understand this is the error message shown to
 # the user.
 cliUnusedArg=יותר מידי ארגומנטים
+
+# LOCALIZATION NOTE: The default name for a group of parameters.
+canonDefaultGroupName=אפשרויות
+
+# LOCALIZATION NOTE (canonProxyDesc, canonProxyManual): These commands are
+# used to execute commands on a remote system (using a proxy). Parameters: %S
+# is the name of the remote system.
+canonProxyDesc=ביצוע פקודה על %S
+canonProxyManual=קבוצת פקודות שתופעל על מערכת מרוחקת. המערכת המרוחקת נגישה באמצעות %S
+
+# LOCALIZATION NOTE: This error message is displayed when we try to add a new
+# command (using a proxy) where one already exists with the same name.
+canonProxyExists=כבר קיימת פקודה בשם '%S'
 
 # LOCALIZATION NOTE (cliOptions): The title of the dialog which displays the
 # options that are available to the current command.
@@ -62,6 +84,13 @@ jstypeParseScope=הטווח אבד
 # JavaScript completion, sometimes the property to be completed does not
 # exist. This error message is displayed when this happens.
 jstypeParseMissing=לא ניתן למצוא את המאפיין '%S'
+
+# LOCALIZATION NOTE: The error message when the user types a command that
+# isn't registered
+cliUnknownCommand=פקודה לא חוקית
+
+# LOCALIZATION NOTE: A parameter should have a value, but doesn't
+cliIncompleteParam=נדרש ערך עבור '%1$S'.
 
 # LOCALIZATION NOTE (jstypeBeginSyntax): When the command line is doing
 # JavaScript completion using invalid JavaScript, this error message is
@@ -178,6 +207,18 @@ helpManOptional=לא חובה
 # of the matching sub-commands
 subCommands=תת פקודות
 
+# LOCALIZATION NOTE: This error message is displayed when the command line is
+# cannot find a match for the parse types.
+commandParseError=שגיאת פענוח שורת פקודה
+
+# LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
+# strings are used to describe the 'context' command and its 'prefix'
+# parameter. See localization comment for 'connect' for an explanation about
+# 'prefix'.
+contextDesc=התרכזות בקבוצת פקודות
+contextManual=הגדרת קידומת בררת מחדל לפקודות עתידיות. לדוגמה 'context git' יאפשר לכתוב 'commit' במקום 'git commit'.
+contextPrefixDesc=קידומת הפקודה
+
 # LOCALIZATION NOTE (subCommandsNone): Text shown as part of the output of the
 # 'help' command when the command in question should have sub-commands but in
 # fact has none
@@ -193,6 +234,25 @@ prefDesc=פקודות לשליטה על הגדרות
 # Displayed when the user asks for help on what it does.
 prefManual=Commands to display and alter preferences both for GCLI and the surrounding environment
 
+# LOCALIZATION NOTE (contextReply, contextEmptyReply): These messages are
+# displayed during the processing of the 'context' command, to indicate
+# success or that there is no command prefix.
+contextReply=קידומת הפקודות %S בשימוש
+contextEmptyReply=קידומת פקודות הוסרה
+
+# LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
+# connectMethodDesc, connectUrlDesc, connectDupReply): These strings describe
+# the 'connect' command and all its available parameters. A 'prefix' is an 
+# alias for the remote server (think of it as a "connection name"), and it
+# allows to identify a specific server when connected to multiple remote
+# servers.
+connectDesc=תיווך פקודות לשרת
+connectManual=התחברות לשרת, יצירת גרסה מקומית של הפקודות על השרת. פקודות מרוחקות כוללות קידומת כדי להבדיל בינן לבין פקודות מקומיות (פקודת ההקשר תסייע לשנות זאת)
+connectPrefixDesc=קידומת אב לפקודות מיובאות
+connectMethodDesc=צורת ההתחברות
+connectUrlDesc=כתובת להתחברות
+connectDupReply=החיבור %S כבר קיים.
+
 # LOCALIZATION NOTE (prefListDesc): A very short description of the 'pref
 # list' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible. See
@@ -202,6 +262,19 @@ prefListDesc=הצגת הגדרות זמינות
 # LOCALIZATION NOTE (prefListManual): A fuller description of the 'pref list'
 # command. Displayed when the user asks for help on what it does.
 prefListManual=Display a list of preferences, optionally filtered when using the 'search' parameter
+
+# LOCALIZATION NOTE: The output of the 'connect' command, telling the user
+# what it has done. Parameters: %S is the prefix command. See localization
+# comment for 'connect' for an explanation about 'prefix'.
+connectReply=התווספו %S פקודות.
+
+# LOCALIZATION NOTE (disconnectDesc2, disconnectManual2,
+# disconnectPrefixDesc): These strings describe the 'disconnect' command and
+# all its available parameters. See localization comment for 'connect' for an
+# explanation about 'prefix'.
+disconnectDesc2=התנתקות משרת
+disconnectManual2=התנתקות מהשרת המחובר כעת עבור הרצת פקודות מרוחקת
+disconnectPrefixDesc=קידומת אב לפקודות מיובאות
 
 # LOCALIZATION NOTE (prefListSearchDesc): A short description of the 'search'
 # parameter to the 'pref list' command. See prefListSearchManual for a fuller
@@ -223,6 +296,9 @@ prefShowDesc=הצגת ערך הגדרה
 # LOCALIZATION NOTE (prefShowManual): A fuller description of the 'pref show'
 # command. Displayed when the user asks for help on what it does.
 prefShowManual=Display the value of a given preference
+
+# LOCALIZATION NOTE: These strings describe the 'clear' command
+clearDesc=מחיקת שטח פלט
 
 # LOCALIZATION NOTE (prefShowSettingDesc): A short description of the
 # 'setting' parameter to the 'pref show' command. See prefShowSettingManual
