[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/shellservice.properties
+++ b/es-MX/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,12 @@ safeModeLabel=%S Modo &seguro
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserConfirm.label     = Usar %S como mi navegador por defecto
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Opciones
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Ahora no
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = No volver a preguntar
 setDefaultBrowserNever.accesskey   = N
 
