--- a/es-MX/browser/chrome/browser/webrtcIndicator.properties
+++ b/es-MX/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Compartir indicador
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = La cámara y el micrófono están siendo compartidos. Haz clic para controlar el intercambio.
 webrtcIndicator.sharingCamera.tooltip              = La cámara se está compartiendo. Haz clic para controlar el intercambio.
 webrtcIndicator.sharingMicrophone.tooltip          = El micrófono se está compartiendo. Haz clic para controlar el intercambio.
+webrtcIndicator.sharingApplication.tooltip = Una aplicación se está compartiendo. Haz clic para controlar la compartición.
 webrtcIndicator.sharingScreen.tooltip = La pantalla se está compartiendo. Haz clic para controlar el intercambio.
 webrtcIndicator.sharingWindow.tooltip = Una ventana se está compartiendo. Haz clic para controlar el intercambio.
 
@@ -23,6 +24,7 @@ webrtcIndicator.sharingWindow.tooltip = Una ventana se está compartiendo. Haz c
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Compartiendo cámara con "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Compartiendo micrófono con "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Compartiendo un aplicación con "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Compartiendo pantalla con "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Compartiendo ventana con "%S"
 webrtcIndicator.controlSharing.menuitem = Controlar el intercambio
@@ -37,6 +39,7 @@ webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Compartiendo micrófono co
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Compartiendo una aplicación con #1 pestaña;Compartiendo aplicaciones con #1 pestañas
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
