--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -40,6 +40,7 @@ progressbar    =       barra de progreso
 slider         =       deslizador
 spinbutton     =       botón de incremento/decremento
 diagram        =       diagrama
+animation      =       animación
 passwordtext   =       texto de contraseña
 radiomenuitem  =       elemento de menú de radio
 textcontainer  =       contenedor de texto
@@ -51,8 +52,15 @@ paragraph      =       párrafo
 entry          =       entrada
 caption        =       leyenda
 heading        =       encabezado
+comboboxoption =       opción de caja desplegable
 imagemap       =       mapa de imágenes
+listboxoption  =       opción
+listbox        =       caja de lista
+flatequation   =       ecuación plana
+gridcell       =       rejilla
+note           =       nota
 figure         =       figura
+definitionlist =       lista de definiciones
 term           =       término
 definition     =       definición
 
@@ -173,7 +181,11 @@ scrollbarAbbr      =       barra de desplazamiento
 gripAbbr           =       asa
 alertAbbr          =       alerta
 menupopupAbbr      =       menú emergente
+documentAbbr       =       documento
+paneAbbr           =       panel
+dialogAbbr         =       diálogo
 tableAbbr          =       tbl
+rowAbbr            =       fila
 cellAbbr           =       celda
 linkAbbr           =       lnk
 listAbbr           =       lista
@@ -186,6 +198,15 @@ graphicAbbr        =       gráfico
 pushbuttonAbbr     =       btn
 checkbuttonAbbr    =       casilla seleccionable
 radiobuttonAbbr    =       botón de radio
+comboboxAbbr       =       caja desplegable
+progressbarAbbr    =       barra de progreso
+sliderAbbr         =       deslizador
+spinbuttonAbbr     =       botón de incremento/decremento
+diagramAbbr        =       diagrama
+animationAbbr      =       animación
+equationAbbr       =       ecuación
+buttonmenuAbbr     =       menú de botón
+whitespaceAbbr     =       espacio en blanco
 canvasAbbr         =       canvas
 checkmenuitemAbbr  =       elemento del menú seleccionable
 labelAbbr          =       etiqueta
@@ -198,6 +219,7 @@ headerAbbr         =       encabezado
 footerAbbr         =       pie de página
 paragraphAbbr      =       párrafo
 imagemapAbbr       =       imgmap
+flatequationAbbr   =       ecuación plana
 gridcellAbbr       =       cuadrícula
 noteAbbr           =       nota
 figureAbbr         =       fig
