--- a/es-MX/browser/chrome/browser/devtools/webide.properties
+++ b/es-MX/browser/chrome/browser/devtools/webide.properties
@@ -10,8 +10,16 @@ projectButton_label=Abrir aplicación
 
 mainProcess_label=Proceso principal
 
+local_runtime=Entorno de ejecución local
+remote_runtime=Entorno de ejecución remoto
+remote_runtime_promptTitle=Entorno de ejecución remoto
+remote_runtime_promptMessage=servidor:puerto
 
+importPackagedApp_title=Seleccionar directorio
+importHostedApp_title=Abrir aplicación alojada
+importHostedApp_header=Introduce la URL del archivo manifest
 
+notification_showTroubleShooting_label=solucionar problemas
 notification_showTroubleShooting_accesskey=t
 
 # These messages appear in a notification box when an error occur.
@@ -36,9 +44,14 @@ addons_unstable=inestable
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
 # "stable" or "unstable".
+addons_simulator_label=Firefox OS %1$S Simulador (%2$S)
 addons_install_button=instalar
 addons_uninstall_button=desinstalar
+addons_adb_label=Complemento del asistente ADB
+addons_adb_warning=Los dispositivos USB no serán detectados sin este complemento
+addons_status_unknown=?
 addons_status_installed=Instalado
+addons_status_uninstalled=No instalado
 
 runtimedetails_checkunkown=desconocido
 runtimedetails_notUSBDevice=No es un dispositivo USB
