--- a/es-MX/browser/chrome/browser/lightweightThemes.properties
+++ b/es-MX/browser/chrome/browser/lightweightThemes.properties
@@ -8,4 +8,8 @@ lightweightThemes.recommended-1.description=A Web Browser Renaissance es (C) de 
 lightweightThemes.recommended-2.name=Space Fantasy
 
 
+lightweightThemes.recommended-4.name=Pastel Gradient
+lightweightThemes.recommended-4.description=Pastel Gradient es (C) de darrinhenein. Disponible bajo CC-BY. Sin garantía.
 
+lightweightThemes.recommended-5.name=Carbon Light
+lightweightThemes.recommended-5.description=Carbon Light es (C) de Jaxivo. Disponible bajo CC-BY-SA. Sin garantía.
