--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -9,6 +9,7 @@ share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
+invitee_name_label=¿A quién estás invitando?
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -16,6 +17,7 @@ share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=La invitación caducará en {{expiry_time}} día;La invitación caducará en {{expiry_time}} días
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -23,6 +25,7 @@ share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=La invitación caducará en {{expiry_time}} hora;La invitación caducará en {{expiry_time}} horas
 
 # Status text
 display_name_guest=Invitado
@@ -47,9 +50,12 @@ problem_accessing_account=Hubo un problema accesando a tu cuenta
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Reintentar
 
+share_email_subject3=Haz sido invitado a una conversación
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Para aceptar esta invitación, sólo copia o haz clic en este enlace para iniciar tu conversación: \n\n{{callUrl}}
 copy_url_button=Copiar
 
 
@@ -111,23 +117,30 @@ import_failed_description=Lo siento, no se puede importar contacto, por favor mi
 ## to confirm deletion of a contact.
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Eliminar contacto
+confirm_delete_contact_cancel_button=Cancelar
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Bloquear contacto
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Desbloquear contacto
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Editar contacto…
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Editar contacto
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Nombre
 edit_contact_email_label=Correo electrónico
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
@@ -154,6 +167,7 @@ incoming_call_accept_audio_only_tooltip=Aceptar con voz
 incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar y bloquear
 incoming_call_block_button=Bloquear
+hangup_button_title=Colgar
 hangup_button_caption2=Salir
 mute_local_audio_button_title=Detener tu audio
 unmute_local_audio_button_title=Reanudar tu audio
@@ -164,9 +178,11 @@ unmute_local_video_button_title=Reanudar tu video
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Conversación con {{contactName}}
 
 # Outgoing conversation
 
+outgoing_call_title=¿Iniciar conversación?
 initiate_audio_video_call_button2=Empezar
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
@@ -210,6 +226,13 @@ legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} \
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
 
+feedback_thank_you_heading=¡Gracias por tu opinión!
+feedback_category_audio_quality=Calidad del sonido
+feedback_category_video_quality=Calidad del video
+feedback_category_was_disconnected=Se ha desconectado
+feedback_category_confusing=Confusa
+feedback_category_other=Otros:
+feedback_custom_category_text_placeholder=¿Qué sucedió?
 feedback_submit_button=Enviar
 feedback_back_button=Atrás
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
