--- a/es-MX/browser/chrome/browser/newTab.properties
+++ b/es-MX/browser/chrome/browser/newTab.properties
@@ -8,9 +8,11 @@ newtab.block=Quitar este sitio
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSORED
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain=Te mostramos esta miniatura en nombre de un socio de Mozilla. Puedes quitarla en cualquier momento haciendo clic en el botón %1$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
