[S] mobile: Bug 1034114 - Defer remote debugger initialization via notification

--- a/it/mobile/android/chrome/browser.properties
+++ b/it/mobile/android/chrome/browser.properties
@@ -169,6 +169,8 @@ remoteIncomingPromptCancel = Annulla
 remoteNotificationTitle = Debug attivo per %S
 remoteNotificationGenericName = App
 remoteNotificationMessage = In ascolto sulla porta %S
+remoteStartNotificationTitle = Attivazione debug per %S
+remoteStartNotificationMessage = Tocca per attivare il debug remoto
 helperapps.open = Apri
 helperapps.ignore = Ignora
 helperapps.dontAskAgain = Non chiedere più per questo sito
