--- a/hi-IN/browser/chrome/browser/preferences/preferences.properties
+++ b/hi-IN/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=निम्न कूकीज आपके कंप्यूटर
 cookiesFiltered=निम्न कूकीज आपकी खोज से मेल खाता है:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=ऑफ़लाइन वेबसाइट आँकड़ा हटाएँ
 offlineAppRemovePrompt=इस आँकड़ा को हटाने के बाद, %S ऑफ़लाइन उपलब्ध नहीं रहेगा.  क्या आप इस ऑफ़लाइन वेबसाइट को हटाने के लिए निश्चित हैं?
 offlineAppRemoveConfirm=ऑफ़लाइन आँकड़ा हटाएँ
