--- a/hi-IN/dom/chrome/accessibility/AccessFu.properties
+++ b/hi-IN/dom/chrome/accessibility/AccessFu.properties
@@ -7,72 +7,12 @@ screenReaderStarted = स्क्रीन रीडर आरंभ
 screenReaderStopped = स्क्रीन रीडर रूक गया
 
 # Roles
-menubar        =       मेन्यू पट्टी
-scrollbar      =       स्क्रॉल पट्टी
-grip           =       ग्रिप
-alert          =       चेतावनी
-menupopup      =       मेन्यू पॉप-अप
-document       =       दस्तावेज़
-pane           =       पट्टी
-dialog         =       संवाद
-separator      =       विलगावक
-toolbar        =       औज़ारपट्टी
-statusbar      =       स्थिति पट्टी
 table          =       सारणी
-columnheader   =       स्तंभ शीर्षिका
-rowheader      =       पंक्ति शीर्षिका
-column         =       स्तंभ
-row            =       पंक्ति
-cell           =       कोष्ठ
 link           =       कड़ी
-list           =       सूची
-listitem       =       सूची मद
-outline        =       ख़ाका
-outlineitem    =       ख़ाका मद
-pagetab        =       टैब
-propertypage   =       विशेषता पृष्ठ
-graphic        =       आलेखी
 pushbutton     =       बटन
-checkbutton    =       जाँच बटन
-radiobutton    =       रेडियो बटन
-combobox       =       कोंबो बॉक्स
-progressbar    =       प्रगति पट्टी
-slider         =       स्लाइड
-spinbutton     =       स्पिन बटन
-diagram        =       आरेख
-animation      =       चल-छवि
-equation       =       समीकरण
-buttonmenu     =       बटन मेन्यू
-whitespace     =       खाली स्थान
-pagetablist    =       टैब सूची
-canvas         =       कैनवास
-checkmenuitem  =       मेन्यू मद जाँचें
-label          =       लेबल
 passwordtext   =       कूटशब्द पाठ
-radiomenuitem  =       रेडियो मेन्यू मद
-textcontainer  =       पाठ कंटेनर
-togglebutton   =       टॉगल बटन
-treetable      =       तरू सारणी
-header         =       शीर्षिका
-footer         =       पादिका
-paragraph      =       अनुच्छेद
-entry          =       प्रविष्टि
-caption        =       अनुशीर्षक
-heading        =       शीर्षक
-section        =       खंड
-form           =       फॉर्म
-comboboxlist   =       कोबों पेटी सूची
-comboboxoption =       कोंबो पेटी विकल्प
 imagemap       =       छवि मानचित्र
-listboxoption  =       विकल्प
-listbox        =       सूची पेटी
-flatequation   =       समतल समीकरण
-gridcell       =       ग्रिड सेल
-note           =       नोट
 figure         =       चित्र
-definitionlist =       परिभाषा सूची
-term           =       शब्द
-definition     =       परिभाषा
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       पाठ क्षेत्र
@@ -94,11 +34,9 @@ listEnd        =       अंतिम वस्तु
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       एक मद;#1 मद
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S %3$S का
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       बैनर
@@ -108,17 +46,12 @@ main           =       मुख्य
 navigation     =       संचरण
 search         =       खोजें
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S %S और %S के साथ
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 स्तंभ;#1 स्तंभ
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 पंक्ति;#1 पंक्ति
 
 # table or grid cell information
 columnInfo = स्तंभ %S
@@ -132,7 +65,7 @@ pressAction    =      दबाया गया
 checkAction    =      जाँचा गगा
 uncheckAction  =      बिना जाँचा
 selectAction   =      चयनित
-unselectAction =      विचयनित
+unselectAction =      अचयनित
 openAction     =      खुला
 closeAction    =      बंद
 switchAction   =      बदला हुआ
@@ -190,18 +123,21 @@ quicknav_Table       = तालिकाएँ
 quicknav_Checkbox    = जाँच पेटी
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       lnk
 pushbuttonAbbr     =       btn
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
