--- a/hi-IN/browser/chrome/browser/devtools/profiler.properties
+++ b/hi-IN/browser/chrome/browser/devtools/profiler.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# LOCALIZATION NOTE These strings are used inside the Debugger
-# which is available from the Web Developer sub-menu -> 'Debugger'.
+# LOCALIZATION NOTE These strings are used inside the Profiler
+# which is available from the Web Developer sub-menu -> 'Profiler'.
 # The correct localization of this file might be to keep it in
 # English, or another language commonly spoken among web developers.
 # You want to make that choice consistent across the developer tools.
@@ -13,105 +13,76 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
-profiler.label=प्रोफाइलर (P)
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
-profiler.panelLabel=प्रोफ़ाइलर पटल
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
-profiler2.commandkey=VK_F5
-profiler.accesskey=P
+profiler.commandkey2=VK_F5
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
 profiler.tooltip2=जावास्क्रिप्ट प्रोफाइलर
 
-# LOCALIZATION NOTE (profiler.profileName):
-# This string is the default name for new profiles. Its parameter is a number.
-# For example: "Profile 1", "Profile 2", etc.
-profiler.profileName=प्रोफ़ाइल %S
+# LOCALIZATION NOTE (noRecordingsText): The text to display in the
+# recordings menu when there are no recorded profiles yet.
+noRecordingsText=कोई प्रोफाइल को अभी तक नहीं हैं.
 
-# LOCALIZATION NOTE (profiler.completeProfile):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays everything that the profiler has generated so far.
-profiler.completeProfile=पूर्ण प्रोफाइल
+# LOCALIZATION NOTE (recordingsList.itemLabel):
+# This string is displayed in the recordings list of the Profiler,
+# identifying a set of function calls.
 
-# LOCALIZATION NOTE (profiler.sampleRange):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays a sample range of data selected by user themselves.
-profiler.sampleRange=नमूना दर\u0020
+# LOCALIZATION NOTE (recordingsList.recordingLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has not finished recording.
 
-# LOCALIZATION NOTE (profiler.runningTime):
-# This string is displayed as a table header in the profiler UI.
-profiler.runningTime=रनिंग टाइम
+# LOCALIZATION NOTE (recordingsList.durationLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has finished recording.
+recordingsList.durationLabel=%S ms
 
-# LOCALIZATION NOTE (profiler.self):
-# This string is displayed as a table header in the profiler UI.
-# "Self" is how much time was spent doing work directly in that function.
-# As opposed to the total time which is how much time was spent in that
-# function and in functions it called.
-profiler.self=स्वयं
+# LOCALIZATION NOTE (recordingsList.saveLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for saving an item to disk.
+recordingsList.saveLabel=सहेजें
 
-# LOCALIZATION NOTE (profiler.symbolName)
-# This string is displayed as a table header in the profiler UI.
-profiler.symbolName=प्रतीक नाम
+# LOCALIZATION NOTE (profile.tab):
+# This string is displayed in the profile view for a tab, after the
+# recording has finished, as the recording 'start → stop' range in milliseconds.
 
-# LOCALIZATION NOTE (profiler.start)
-# This string is displayed on the button that starts the profiler.
-profiler.start=शुरू
+# LOCALIZATION NOTE (graphs.fps):
+# This string is displayed in the framerate graph of the Profiler,
+# as the unit used to measure frames per second. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
 
-# LOCALIZATION NOTE (profiler.stop)
-# This string is displayed on the button that stops the profiler.
-profiler.stop=Stop
+# LOCALIZATION NOTE (category.*):
+# These strings are displayed in the categories graph of the Profiler,
+# as the legend for each block in every bar. These labels should be kept
+# AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.network=संजाल
+category.graphics=चित्रादि
+category.storage=भंडारण
 
-# LOCALIZATION NOTE (profiler.loading)
-# This string is displayed above the progress bar when the profiler
-# is busy loading and parsing the report.
-profiler.loading=प्रोफाइल लोड हो रहा है ...
+# LOCALIZATION NOTE (table.root):
+# This string is displayed in the call tree for the root node.
 
-# LOCALIZATION NOTE (profiler.stateIdle)
-# This string is used to show that the profile in question is in IDLE
-# state meaning that it hasn't been started yet.
-profiler.stateIdle=निष्क्रिय
+# LOCALIZATION NOTE (table.url.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the url
+# labels which, when clicked, jump to the debugger.
 
-# LOCALIZATION NOTE (profiler.stateRunning)
-# This string is used to show that the profile in question is in RUNNING
-# state meaning that it has been started and currently gathering profile data.
-profiler.stateRunning=चल रहा है
+# LOCALIZATION NOTE (table.zoom.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the 'zoom'
+# buttons (small magnifying glass icons) which spawn a new tab.
 
-# LOCALIZATION NOTE (profiler.stateCompleted)
-# This string is used to show that the profile in question is in COMPLETED
-# state meaning that it has been started and stopped already.
-profiler.stateCompleted=Completed
+# LOCALIZATION NOTE (recordingsList.saveDialogTitle):
+# This string is displayed as a title for saving a recording to disk.
 
-# LOCALIZATION NOTE (profiler.sidebarNotice)
-# This string is displayed in the profiler sidebar when there are no
-# existing profiles to show (usually happens when the user opens the
-# profiler for the first time).
-profiler.sidebarNotice=कोई प्रोफाइल को अभी तक नहीं हैं.
+# LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogJSONFilter=JSON फ़ाइल
 
-# LOCALIZATION NOTE (profiler.startProfilerString)
-# This string is displayed on the profiler button when no active
-# profiling sessions are running
-profiler.startProfilerString=प्रोफ़ाइलिंग आरंभ करें
-
-# LOCALIZATION NOTE (profiler.stopProfilerString)
-# This string is displayed on the profiler button when an active
-# profiling session is running
-profiler.stopProfilerString=प्रोफ़ाइलिंग रोकें
-
-# LOCALIZATION NOTE (profiler.save)
-# This string is displayed as a label for a button that opens a Save File
-# dialog where user can save generated profiler to a file.
-profiler.save=सहेजें
-
-# LOCALIZATION NOTE (profiler.saveFileAs)
-# This string as a title for a Save File dialog.
-profiler.saveFileAs=के रूप में प्रोफ़ाइल सहेजें
-
-# LOCALIZATION NOTE (profiler.openFile)
-# This string as a title for a Open File dialog.
-profiler.openFile=प्रोफ़ाइल आयात करें
+# LOCALIZATION NOTE (recordingsList.saveDialogAllFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogAllFilter=सभी फ़ाइल
