--- a/hi-IN/browser/chrome/browser/devtools/toolbox.properties
+++ b/hi-IN/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=डेवलेपर औज़ार
 # for the options panel tab.
 optionsButton.tooltip=औज़ारपेटी विकल्प
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=विकल्प
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=औज़ारपेटी विकल्प पटल
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=पृष्ठ से एक तत्व चुनें
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=गहरा प्रसंग
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=हल्का प्रसंग
