--- a/hi-IN/browser/chrome/browser/loop/loop.properties
+++ b/hi-IN/browser/chrome/browser/loop/loop.properties
@@ -6,34 +6,180 @@
 
 share_link_header_text=बात करने के लिए कुछ का आमंत्रित करने के लिए इस कड़ी का साझा करें:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+
 # Status text
 display_name_dnd_status=परेशान नहीं करें
 display_name_available_status=उपलब्ध
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=माफ करें, हम कॉल यूआएल पाने में असमर्थ हैं.
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+copy_url_button=नक़ल करें
+
+
+settings_menu_item_signin=साइन इन
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=खोजें…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+importing_contacts_progress_button=आयात कर रहा है...
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=संपन्न
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 
 # Conversation Window Strings
 
-incoming_call_title=इनकमिंग काल…
-incoming_call=इनकमिंग काल
-incoming_call_answer_button=जवाब
-incoming_call_decline_button=रद्द करें
-incoming_call_ignore_button=नज़रअंदाज़ करें
 incoming_call_block_button=रोकें
-hangup_button_title=हैंगअप
+hangup_button_caption2=बाहर निकलें
 mute_local_audio_button_title=ऑडियो मौन करें
 unmute_local_audio_button_title=ऑडियो ट्रैक्स अनम्यूट करें
 mute_local_video_button_title=वीडियो मौन करें
 unmute_local_video_button_title=वीडियो ट्रैक्स अनम्यूट करें
 
-peer_ended_conversation=आपके पीयर ने कॉल समाप्त कर दिया.
-call_has_ended=आपका कॉल समाप्त.
-close_window=इस विंडो को बन्द करें
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+
+# Outgoing conversation
+
+initiate_audio_video_call_button2=शुरू
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=कनेक्ट कर रहा है…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+
+
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+email_link_button=ईमेल कडी
 
 cannot_start_call_session_not_ready=कॉल आरंभ नहीं कर सकता है, सत्र तैयार नहीं है.
 network_disconnected=संजाल कनेक्शन अचानक समाप्त.
-
 connection_error_see_console_notification=कॉल विफल; विवरण के लिए कंसोल देखें.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=By using this product you agree to the <a target="_blank" href="{{terms_of_use_url}}">Terms of Use</a> and <a href="{{privacy_notice_url}}">Privacy Notice</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+  and {{privacy_notice}}.
+legal_text_privacy = गोपनीयता नीति
+
+feedback_back_button=पीछे
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
