--- a/hi-IN/browser/chrome/browser/shellservice.properties
+++ b/hi-IN/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S &विकल्प
 safeModeLabel=%S व सुरक्षित मोड
-setDefaultBrowserTitle=मूलभूत ब्राउज़र
-setDefaultBrowserMessage=%S अभी आपके मूलभूत ब्रॉउजर के रूप में सेट नहीं है. क्या आप इसे अपना मूलभूत ब्राउज़र बनाना चाहते हैं?
-setDefaultBrowserDontAsk=हमेशा यह जांचें जब %S को आरंभ किया जा रहा हो.
-alreadyDefaultBrowser=%S पहले से मूलभूत ब्राउज़र के रूप में सेट है.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = विकल्प
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = Don't ask me again
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin=डेस्कटॉप पृष्ठभूमि.bmp
 DesktopBackgroundDownloading=चित्र सहेज रहा है...
 DesktopBackgroundSet=डेस्कटॉप पृष्ठभूमि सेट करें
