--- a/hi-IN/browser/chrome/browser/webrtcIndicator.properties
+++ b/hi-IN/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,24 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = "%S" के साथ माइ
 webrtcIndicator.sharingScreenWith.menuitem = "%S" के साथ स्क्रीन साझा करें
 webrtcIndicator.sharingWindowWith.menuitem = "%S" के साथ विंडो साझा करें
 webrtcIndicator.controlSharing.menuitem = साझा नियंत्रण
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = #1 टैब के साथ कैमरा साझा करना;#1 टैब के साथ कैमरा साझा करना
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = #1 टैब के साथ माइक्रोफ़ोन साझा करना;#1 टैब के साथ माइक्रोफ़ोन साझा करना
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = #1 टैब के साथ स्क्रीन साझा करना;#1 टैब के साथ स्क्रीन साझा करना
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = #1 टैब के साथ विंडो साझा करना;#1 टैब के साथ विंडो साझा करना
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
