--- a/hi-IN/dom/chrome/security/csp.properties
+++ b/hi-IN/dom/chrome/security/csp.properties
@@ -65,6 +65,8 @@ scriptFromStringBlocked = किसी स्ट्रिंग से जाव
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S को बतौर मेजबाननाम रोक रहा है, न कि कुँजीपट. यदि आप इसे बीजशब्द मानना चाहते हैं, '%2$S' (एकल उद्धरण में लपेटा गया) का उपयोग करें.
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
 policyURINotAlone = policy-uri केवल अकेले प्रकट हो सकता है
