--- a/hi-IN/webapprt/webapprt/webapp.properties
+++ b/hi-IN/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=%S संस्थापित करें
 webapps.install.description=क्या आप %S को संस्थापित करना चाहते हैं?
 webapps.install.install=एप्प संस्थापित करें
 webapps.install.dontinstall=मत संस्थापित करें
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=भुगतान
 paymentDialog.message=किस भुगतान प्रदाता को आप उपयोग करना चाहते हैं?
